feat:封装控制层统一拦截日志输出v1